--- a/ui/index.html
+++ b/ui/index.html
@@ -4,8 +4,8 @@
         <link href="/ui/style.css" rel="stylesheet" />
     </head>
     <body>
-        <div class="left">
-            <img src="/ui/madi.png" class="img-medium"/>
+        <div class="center">
+            <img src="/ui/madi.png" class="img-small"/>
         </div>
         <br>
         <div class="center text-big bold">
